# Taskly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: task-manager.cpp  task-manager.hpp  task.cpp  task.hpp
